Finalize generating outputs

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,15 +218,17 @@
     "\n",
     "    return prop\n",
     "\n",
-    "# Delete old image files\n",
-    "for _, _, filenames in os.walk(IMAGES_RAW_PATH):\n",
-    "    for filename in filenames:\n",
-    "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "            os.remove(os.path.join(IMAGES_RAW_PATH, filename))\n",
+    "# Clear the folder\n",
+    "def clear_folder(folder):\n",
+    "    for _, _, filenames in os.walk(folder):\n",
+    "        for filename in filenames:\n",
+    "            if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "                os.remove(os.path.join(folder, filename))\n",
     "\n",
-    "    break\n",
+    "        break\n",
     "\n",
     "# Parse artwork images\n",
+    "clear_folder(IMAGES_RAW_PATH)\n",
     "images = {}\n",
     "for _, _, filenames in os.walk(conf['artwork_path']):\n",
     "    for filename in filenames:\n",
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,15 +375,6 @@
     "def create_folder(folder):\n",
     "    if not os.path.exists(folder):\n",
     "        os.mkdir(folder)\n",
-    "\n",
-    "# Clear the folder\n",
-    "def clear_folder(folder):\n",
-    "    for _, _, filenames in os.walk(folder):\n",
-    "        for filename in filenames:\n",
-    "            if filename.split('.')[-1] in ('jpg', 'png'):\n",
-    "                os.remove(os.path.join(folder, filename))\n",
-    "\n",
-    "        break\n",
     "\n",
     "# Delete folder images for outdated or modified cards\n",
     "def clear_modified_images(folder, skip_ids):\n",
@@ -404,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,18 +419,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-pdf-back-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png300PDF\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 45 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n",
-      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-pdf-front-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png300PDF\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 926 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate images for PDF outputs\n",
     "output_path = os.path.join(IMAGES_EONS_PATH, 'png300PDF', SET_UUID)\n",
@@ -484,17 +468,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-makeplayingcards-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png800BleedMPC\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 989 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: tile-backend-swap gap list had more than one element\\n\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-backend-swap.c:1546):gegl_tile_backend_swap_cleanup: runtime check failed: (gap_list->start == 0 && gap_list->end == file_size)\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Generate images for MakePlayingCards outputs\n",
     "output_path = os.path.join(IMAGES_EONS_PATH, 'png800BleedMPC', SET_UUID)\n",
@@ -521,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,43 +653,47 @@
     "output_path = os.path.join(OUTPUT_MPC_PATH, set_name)\n",
     "create_folder(output_path)\n",
     "\n",
-    "#with py7zr.SevenZipFile(os.path.join(output_path, '{}.7z'.format(set_name)), 'w') as zip_obj:\n",
     "with zipfile.ZipFile(os.path.join(output_path, '{}.zip'.format(set_name)), 'w') as zip_obj:\n",
-    "    for _, _, filenames in os.walk(input_path):\n",
-    "        for filename in filenames:\n",
-    "            parts = filename.split('-')\n",
-    "            if parts[-1] != '1.png':\n",
-    "                continue\n",
-    "\n",
-    "            back_filepath = os.path.join(input_path, '{}-2.png'.format('-'.join(parts[:-1])))\n",
-    "            if not os.path.exists(back_filepath):\n",
-    "                if parts[2] == 'p':\n",
-    "                    back_filepath = os.path.join(IMAGES_BACK_PATH, 'playerBackUnofficialMPC.png')\n",
-    "                elif parts[2] == 'e':\n",
-    "                    back_filepath = os.path.join(IMAGES_BACK_PATH, 'encounterBackUnofficialMPC.png')\n",
-    "                else:\n",
-    "                    print('Missing card back for {}, removing the file from MakePlayingCards archive'\n",
-    "                          .format(filename))\n",
+    "    with py7zr.SevenZipFile(os.path.join(output_path, '{}.7z'.format(set_name)), 'w') as sevenz_obj:\n",
+    "        for _, _, filenames in os.walk(input_path):\n",
+    "            for filename in filenames:\n",
+    "                parts = filename.split('-')\n",
+    "                if parts[-1] != '1.png':\n",
     "                    continue\n",
     "\n",
-    "            if parts[1] == 'p':\n",
-    "                for i in range(3):\n",
-    "                    parts[1] = str(i + 1)\n",
+    "                back_filepath = os.path.join(input_path, '{}-2.png'.format('-'.join(parts[:-1])))\n",
+    "                if not os.path.exists(back_filepath):\n",
+    "                    if parts[2] == 'p':\n",
+    "                        back_filepath = os.path.join(IMAGES_BACK_PATH, 'playerBackUnofficialMPC.png')\n",
+    "                    elif parts[2] == 'e':\n",
+    "                        back_filepath = os.path.join(IMAGES_BACK_PATH, 'encounterBackUnofficialMPC.png')\n",
+    "                    else:\n",
+    "                        print('Missing card back for {}, removing the file from MakePlayingCards archive'\n",
+    "                              .format(filename))\n",
+    "                        continue\n",
+    "\n",
+    "                if parts[1] == 'p':\n",
+    "                    for i in range(3):\n",
+    "                        parts[1] = str(i + 1)\n",
+    "                        front_zippath = re.sub('-(?:e|p)-', '-', re.sub('-+', '-', re.sub('.{36}(?=-1\\.png)', '',\n",
+    "                                                              'front/{}'.format('-'.join(parts)))))\n",
+    "                        back_zippath = re.sub('-(?:e|p)-', '-', re.sub('-+', '-', re.sub('.{36}(?=-2\\.png)', '',\n",
+    "                                                             'back/{}'.format('{}-2.png'.format('-'.join(parts[:-1]))))))\n",
+    "                        zip_obj.write(os.path.join(input_path, filename), front_zippath)\n",
+    "                        zip_obj.write(back_filepath, back_zippath)\n",
+    "                        sevenz_obj.write(os.path.join(input_path, filename), front_zippath)\n",
+    "                        sevenz_obj.write(back_filepath, back_zippath)\n",
+    "                else:\n",
     "                    front_zippath = re.sub('-(?:e|p)-', '-', re.sub('-+', '-', re.sub('.{36}(?=-1\\.png)', '',\n",
     "                                                          'front/{}'.format('-'.join(parts)))))\n",
     "                    back_zippath = re.sub('-(?:e|p)-', '-', re.sub('-+', '-', re.sub('.{36}(?=-2\\.png)', '',\n",
     "                                                         'back/{}'.format('{}-2.png'.format('-'.join(parts[:-1]))))))\n",
     "                    zip_obj.write(os.path.join(input_path, filename), front_zippath)\n",
     "                    zip_obj.write(back_filepath, back_zippath)\n",
-    "            else:\n",
-    "                front_zippath = re.sub('-(?:e|p)-', '-', re.sub('-+', '-', re.sub('.{36}(?=-1\\.png)', '',\n",
-    "                                                      'front/{}'.format('-'.join(parts)))))\n",
-    "                back_zippath = re.sub('-(?:e|p)-', '-', re.sub('-+', '-', re.sub('.{36}(?=-2\\.png)', '',\n",
-    "                                                     'back/{}'.format('{}-2.png'.format('-'.join(parts[:-1]))))))\n",
-    "                zip_obj.write(os.path.join(input_path, filename), front_zippath)\n",
-    "                zip_obj.write(back_filepath, back_zippath)\n",
+    "                    sevenz_obj.write(os.path.join(input_path, filename), front_zippath)\n",
+    "                    sevenz_obj.write(back_filepath, back_zippath)\n",
     "\n",
-    "        break"
+    "            break"
    ]
   },
   {
@@ -723,7 +703,7 @@
     "Now there should be the following outputs:\n",
     "\n",
     "1. `Output/DB/<set name>/`: 300 dpi JPG images for general purposes.\n",
-    "2. `Output/MakePlayingCards/<set name>`: archive of 800 dpi PNG images\n",
+    "2. `Output/MakePlayingCards/<set name>`: `zip` and `7z` archives of 800 dpi PNG images\n",
     "    to be printed on MakePlayingCards.com.\n",
     "3. `Output/OCTGN/<octgnid>/:` `set.xml` and `o8c` image pack (300 dpi JPG) for OCTGN.\n",
     "    Add the latter using the \"Add Image Packs\" button from within OCTGN.\n",
