Allow Strange Eons to work with different sets

--- a/setGenerator.ipynb
+++ b/setGenerator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,18 +87,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read configuration\n",
     "with open(CONFIGURATION_PATH, 'r') as f_conf:\n",
-    "    conf = yaml.safe_load(f_conf)"
+    "    conf = yaml.safe_load(f_conf)\n",
+    "\n",
+    "if os.path.exists(os.path.join(conf['artwork_path'], SET_UUID)):\n",
+    "    artwork_path = os.path.join(conf['artwork_path'], SET_UUID)\n",
+    "else:\n",
+    "    artwork_path = conf['artwork_path']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,15 +227,17 @@
     "def clear_folder(folder):\n",
     "    for _, _, filenames in os.walk(folder):\n",
     "        for filename in filenames:\n",
-    "            if filename.split('.')[-1] in ('jpg', 'png'):\n",
+    "            if filename not in ('seproject', '.gitignore'):\n",
     "                os.remove(os.path.join(folder, filename))\n",
     "\n",
     "        break\n",
     "\n",
-    "# Parse artwork images\n",
+    "# Clear raw image files in the project folder\n",
     "clear_folder(IMAGES_RAW_PATH)\n",
+    "\n",
+    "# Parse artwork images\n",
     "images = {}\n",
-    "for _, _, filenames in os.walk(conf['artwork_path']):\n",
+    "for _, _, filenames in os.walk(artwork_path):\n",
     "    for filename in filenames:\n",
     "        if filename.split('.')[-1] in ('jpg', 'png'):\n",
     "            card_id_side = '_'.join(filename.split('_')[:2])\n",
@@ -260,9 +267,9 @@
     "        prop = get_property(card, 'Artwork')\n",
     "        prop.set('value', filename)\n",
     "        prop = get_property(card, 'Artwork Size')\n",
-    "        prop.set('value', str(os.path.getsize(os.path.join(conf['artwork_path'], filename))))\n",
+    "        prop.set('value', str(os.path.getsize(os.path.join(artwork_path, filename))))\n",
     "        prop = get_property(card, 'Artwork Modified')\n",
-    "        prop.set('value', str(int(os.path.getmtime(os.path.join(conf['artwork_path'], filename)))))\n",
+    "        prop.set('value', str(int(os.path.getmtime(os.path.join(artwork_path, filename)))))\n",
     "\n",
     "        artist = find_properties(card, 'Artist')\n",
     "        if not artist and '_Artist_' in filename:\n",
@@ -278,9 +285,9 @@
     "        prop = get_property(alternate, 'Artwork')\n",
     "        prop.set('value', filename)\n",
     "        prop = get_property(alternate, 'Artwork Size')\n",
-    "        prop.set('value', str(os.path.getsize(os.path.join(conf['artwork_path'], filename))))\n",
+    "        prop.set('value', str(os.path.getsize(os.path.join(artwork_path, filename))))\n",
     "        prop = get_property(alternate, 'Artwork Modified')\n",
-    "        prop.set('value', str(int(os.path.getmtime(os.path.join(conf['artwork_path'], filename)))))\n",
+    "        prop.set('value', str(int(os.path.getmtime(os.path.join(artwork_path, filename)))))\n",
     "\n",
     "        artist = find_properties(alternate, 'Artist')\n",
     "        if not artist and '_Artist_' in filename:\n",
@@ -315,7 +322,7 @@
     "        filename = find_properties(card, 'Artwork')\n",
     "        if filename:\n",
     "            filename = filename[0].attrib['value']\n",
-    "            _ = shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "            _ = shutil.copyfile(os.path.join(artwork_path, filename),\n",
     "                                os.path.join(IMAGES_RAW_PATH, filename))\n",
     "\n",
     "        alternate = [a for a in card if a.attrib.get('type') == 'B']\n",
@@ -324,19 +331,29 @@
     "            filename = find_properties(alternate, 'Artwork')\n",
     "            if filename:\n",
     "                filename = filename[0].attrib['value']\n",
-    "                _ = shutil.copyfile(os.path.join(conf['artwork_path'], filename),\n",
+    "                _ = shutil.copyfile(os.path.join(artwork_path, filename),\n",
     "                                    os.path.join(IMAGES_RAW_PATH, filename))\n",
     "\n",
-    "tree.write(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))\n",
-    "\n",
-    "# Copy setEons.xml into the project\n",
-    "_ = shutil.copyfile(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
-    "                    os.path.join(XML_PATH, 'setEons.xml'))"
+    "tree.write(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Clear XML files in the project folder\n",
+    "clear_folder(XML_PATH)\n",
+    "\n",
+    "# Copy setEons.xml into the project\n",
+    "_ = shutil.copyfile(os.path.join(SET_EONS_PATH, SET_UUID, 'setEons.xml'),\n",
+    "                    os.path.join(XML_PATH, '{}.xml'.format(SET_UUID)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,13 +408,15 @@
     "def update_zip_filename(filename):\n",
     "    output_filename = os.path.split(filename)[-1]\n",
     "    output_filename = output_filename.encode('ascii', errors='replace').decode().replace('?', ' ')\n",
+    "    parts = output_filename.split('.')\n",
+    "    output_filename = '.'.join(parts[:-2] + [parts[-1]])\n",
     "    output_filename = re.sub('-2-1(?=\\.(?:jpg|png)$)', '-2', output_filename)\n",
     "    return output_filename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +428,7 @@
     "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
     "    filelist = [f for f in zip_obj.namelist()\n",
     "                if f.startswith('{}{}'.format(IMAGES_ZIP_PATH, 'jpg300NoBleed'))\n",
-    "                and f.split('.')[-1] == 'jpg']\n",
+    "                and f.split('.')[-1] == 'jpg' and f.split('.')[-2] == SET_UUID]\n",
     "    for filename in filelist:\n",
     "        output_filename = update_zip_filename(filename)\n",
     "        with zip_obj.open(filename) as zip_file:\n",
@@ -419,9 +438,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-pdf-back-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png300PDF\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 10 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n",
+      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-pdf-front-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png300PDF\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 87 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate images for PDF outputs\n",
     "output_path = os.path.join(IMAGES_EONS_PATH, 'png300PDF', SET_UUID)\n",
@@ -432,7 +460,7 @@
     "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
     "    filelist = [f for f in zip_obj.namelist()\n",
     "                if f.startswith('{}{}'.format(IMAGES_ZIP_PATH, 'png300Bleed'))\n",
-    "                and f.split('.')[-1] == 'png']\n",
+    "                and f.split('.')[-1] == 'png' and f.split('.')[-2] == SET_UUID]\n",
     "    for filename in filelist:\n",
     "        output_filename = update_zip_filename(filename)\n",
     "        if output_filename.endswith('-2.png'):\n",
@@ -451,7 +479,7 @@
     "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
     "    filelist = [f for f in zip_obj.namelist()\n",
     "                if f.startswith('{}{}'.format(IMAGES_ZIP_PATH, 'png300NoBleed'))\n",
-    "                and f.split('.')[-1] == 'png']\n",
+    "                and f.split('.')[-1] == 'png' and f.split('.')[-2] == SET_UUID]\n",
     "    for filename in filelist:\n",
     "        output_filename = update_zip_filename(filename)\n",
     "        if output_filename.endswith('-1.png'):\n",
@@ -468,9 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CompletedProcess(args='\"C:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe\" -i -b \"(python-prepare-makeplayingcards-folder 1 \\\\\"Temp\\\\\" \\\\\"imagesEons\\\\\\\\png800BleedMPC\\\\\\\\8a3273ca-1ccd-4e07-913b-766fcc49fe6f\\\\\")\" -b \"(gimp-quit 0)\"', returncode=0, stdout=b'EEEEeEeek! 101 GeglBuffers leaked\\n', stderr=b'batch command executed successfully\\nC:\\\\Program Files\\\\GIMP 2\\\\bin\\\\gimp-console-2.10.exe: GEGL-WARNING: (../gegl/buffer/gegl-tile-handler-cache.c:1076):gegl_tile_cache_destroy: runtime check failed: (g_queue_is_empty (&cache_queue))\\nTo debug GeglBuffer leaks, set the environment variable GEGL_DEBUG to \"buffer-alloc\"\\n')\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate images for MakePlayingCards outputs\n",
     "output_path = os.path.join(IMAGES_EONS_PATH, 'png800BleedMPC', SET_UUID)\n",
@@ -481,7 +517,7 @@
     "with zipfile.ZipFile(PROJECT_PATH) as zip_obj:\n",
     "    filelist = [f for f in zip_obj.namelist()\n",
     "                if f.startswith('{}{}'.format(IMAGES_ZIP_PATH, 'png800Bleed'))\n",
-    "                and f.split('.')[-1] == 'png']\n",
+    "                and f.split('.')[-1] == 'png' and f.split('.')[-2] == SET_UUID]\n",
     "    for filename in filelist:\n",
     "        output_filename = update_zip_filename(filename)\n",
     "        with zip_obj.open(filename) as zip_file:\n",
